SET(ARDULINK_SRCS
    RTArduLinkHost.cpp
    RTArduLinkUtils.cpp)

SET(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(QExtSerial)

IF(QEXTSERIAL_FOUND)
    INCLUDE_DIRECTORIES(${QEXTSERIAL_INCLUDE_DIRS})
    ADD_LIBRARY(rtimu-ardulink SHARED ${ARDULINK_SRCS})
    qt5_use_modules(rtimu-ardulink Core)

    TARGET_LINK_LIBRARIES(rtimu-ardulink ${QEXTSERIAL_LIBRARIES})
    INSTALL(TARGETS rtimu-ardulink DESTINATION lib)
ENDIF(QEXTSERIAL_FOUND)
