SET(ARDULINK_SRCS
    RTArduLinkHost.cpp
    RTArduLinkUtils.cpp)

SET(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt4)
FIND_PACKAGE(QExtSerial)

IF(QEXTSERIAL_FOUND)
    INCLUDE_DIRECTORIES(${QEXTSERIAL_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES(${QT_INCLUDES})
    ADD_LIBRARY(rtimu-ardulink SHARED ${ARDULINK_SRCS})

    TARGET_LINK_LIBRARIES(rtimu-ardulink ${QEXTSERIAL_LIBRARIES})
    INSTALL(TARGETS rtimu-ardulink DESTINATION lib)
ENDIF(QEXTSERIAL_FOUND)
