#
# Copyright 2014 Ettus Research LLC
#

SET(DEMO_SRCS
    IMUView.cpp
    RTHostIMUGL.cpp
    main.cpp)

SET(COMMON_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/../RTHostIMUCommon/AccelCalDlg.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../RTHostIMUCommon/MagCalDlg.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../RTHostIMUCommon/RTHostIMUClient.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../RTHostIMUCommon/RTHostIMUThread.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../RTHostIMUCommon/SelectFusionDlg.cpp)

SET(GL_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLADSShader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLADSTextureShader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGL.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLCylinderComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLDiskComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLFlatShader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLPlaneComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLSphereComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLTextureShader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib/QtGLWireCubeComponent.cpp)

SET(VRIMU_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/VRWidgetLib/VRIMUWidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GL/VRWidgetLib/VRWidget.cpp)


FIND_PACKAGE(Qt4)
INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${QT_HEADERS})

FIND_PACKAGE(QExtSerial)

IF(QEXT_SERIAL_FOUND)
INCLUDE_DIRECTORIES(${QEXTSERIAL_INCLUDE_DIRS})

QT4_WRAP_UI(UI_HEADERS RTHostIMUGL.ui)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/GL/QtGLLib)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/GL/VRWidgetLib)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../RTIMULib)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../RTIMULibDemo)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../RTHostIMUCommon)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../RTArduLinkHost)


ADD_EXECUTABLE(rthostimu_gl
    ${DEMO_SRCS}
    ${COMMON_SRCS}
    ${GL_SRCS}
    ${VRIMU_SRCS}
    ${UI_HEADERS}
    ${GL_HEADERS})

TARGET_LINK_LIBRARIES(rthostimu-gl
    rtimu rtimu-ardulink ${QT_LIBRARIES})

INSTALL(TARGETS rthostimu-gl DESTINATION bin)
ENDIF(QEXT_SERIAL_FOUND)
